@@ -456,7 +456,9 @@ invalid number of section header table entries\n"));
 	ERROR (gettext ("invalid section header index\n"));
     }
 
-  /* Check the shdrs actually exist. */
+  /* Check the shdrs actually exist.  And uncompress them before
+     further checking.  Indexes between sections reference the
+     uncompressed data.  */
   unsigned int scnt;
   Elf_Scn *scn = NULL;
   for (scnt = 1; scnt < shnum; ++scnt)
@@ -464,6 +466,9 @@ invalid number of section header table entries\n"));
 	scn = elf_nextscn (ebl->elf, scn);
 	if (scn == NULL)
 	  break;
+	/* If the section wasn't compressed this does nothing, but
+	   returns an error.  We don't care.  */
+	elf_compress (scn, 0, 0);
      }
   if (scnt < shnum)
     ERROR (gettext ("Can only check %u headers, shnum was %u\n"), scnt, shnum);
