@@ -1,3 +1,9 @@
+2017-04-05  Mark Wielaard  <mark@klomp.org>
+
+	* test-subr.sh (testrun_on_self_compressed): New function.
+	* run-elflint-self.sh: Call testrun_on_self_compressed.
+	* run-elflint-test.sh: Add testfile42z and testfile-s390x-hash-bothz.
+
 2017-03-30  Mark Wielaard  <mark@klomp.org>
 
 	* peel_type.c: New file.
